--- a/src/main/resources/templates/templateadmin/themkhachhang.html
+++ b/src/main/resources/templates/templateadmin/themkhachhang.html
@@ -52,7 +52,7 @@
                             <img src="images/shoes.png" alt="" height="22">
                         </span>
                             <span class="logo-lg">
-                            <h1 class="mt-3" style="color: #abb9e8">FSneaker</h1>
+                            <h1 class="mt-3" style="color: #abb9e8">Sneaker BeeHouse</h1>
                         </span>
                         </a>
 
@@ -61,7 +61,7 @@
                             <img src="images/shoes.png" alt="" height="22">
                         </span>
                             <span class="logo-lg">
-                            <h1 class="mt-3" style="color: #abb9e8">FSneaker</h1>
+                            <h1 class="mt-3" style="color: #abb9e8">Sneaker BeeHouse</h1>
                         </span>
                         </a>
                     </div>
@@ -114,7 +114,7 @@
                         <img src="images/shoes.png" alt="" height="22">
                     </span>
                 <span class="logo-lg">
-                        <h1 class="mt-3" style="color: #abb9e8">FSneaker</h1>
+                        <h1 class="mt-3" style="color: #abb9e8">Sneaker BeeHouse</h1>
                     </span>
             </a>
             <!-- Light Logo-->
@@ -123,7 +123,7 @@
                         <img src="images/shoes.png" alt="" height="22">
                     </span>
                 <span class="logo-lg">
-                       <h1 class="mt-3" style="color: #abb9e8">FSneaker</h1>
+                       <h1 class="mt-3" style="color: #abb9e8">Sneaker BeeHouse</h1>
                     </span>
             </a>
             <button type="button" class="btn btn-sm p-0 fs-20 header-item float-end btn-vertical-sm-hover" id="vertical-hover">
@@ -329,7 +329,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-sm-6">
-                        <script>document.write(new Date().getFullYear())</script> © Fsneaker.
+                        <script>document.write(new Date().getFullYear())</script> © Sneaker BeeHouse.
                     </div>
                     <div class="col-sm-6">
                         <div class="text-sm-end d-none d-sm-block">
