--- a/src/main/resources/templates/templateadmin/suakhachhang.html
+++ b/src/main/resources/templates/templateadmin/suakhachhang.html
@@ -50,7 +50,7 @@
                             <img src="../images/shoes.png" alt="" height="22">
                         </span>
                             <span class="logo-lg">
-                            <h1 class="mt-3" style="color: #abb9e8">FSneaker</h1>
+                            <h1 class="mt-3" style="color: #abb9e8">Sneaker BeeHouse</h1>
                         </span>
                         </a>
 
@@ -59,7 +59,7 @@
                             <img src="../images/shoes.png" alt="" height="22">
                         </span>
                             <span class="logo-lg">
-                           <h1 class="mt-3" style="color: #abb9e8">FSneaker</h1>
+                           <h1 class="mt-3" style="color: #abb9e8">Sneaker BeeHouse</h1>
                         </span>
                         </a>
                     </div>
@@ -113,7 +113,7 @@
                         <img src="../images/shoes.png" alt="" height="22">
                     </span>
                 <span class="logo-lg">
-                        <h1 class="mt-3" style="color: #abb9e8">FSneaker</h1>
+                        <h1 class="mt-3" style="color: #abb9e8">Sneaker BeeHouse</h1>
                     </span>
             </a>
             <!-- Light Logo-->
@@ -122,7 +122,7 @@
                         <img src="../images/shoes.png" alt="" height="22">
                     </span>
                 <span class="logo-lg">
-                        <h1 class="mt-3" style="color: #abb9e8">FSneaker</h1>
+                        <h1 class="mt-3" style="color: #abb9e8">Sneaker BeeHouse</h1>
                     </span>
             </a>
             <button type="button" class="btn btn-sm p-0 fs-20 header-item float-end btn-vertical-sm-hover" id="vertical-hover">
@@ -324,7 +324,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-sm-6">
-                        <script>document.write(new Date().getFullYear())</script> © Fsneaker.
+                        <script>document.write(new Date().getFullYear())</script> © Sneaker BeeHouse.
                     </div>
                     <div class="col-sm-6">
                         <div class="text-sm-end d-none d-sm-block">
