--- a/src/main/resources/templates/templateadmin/them-khuyen-mai.html
+++ b/src/main/resources/templates/templateadmin/them-khuyen-mai.html
@@ -53,7 +53,7 @@
                             <img src="../images/shoes.png" alt="" height="22">
                         </span>
                             <span class="logo-lg">
-                            <h1 class="mt-3" style="color: #abb9e8">FSneaker</h1>
+                            <h1 class="mt-3" style="color: #abb9e8">Sneaker BeeHouse</h1>
                         </span>
                         </a>
 
@@ -62,7 +62,7 @@
                             <img src="../images/shoes.png" alt="" height="22">
                         </span>
                             <span class="logo-lg">
-                            <h1 class="mt-3" style="color: #abb9e8">FSneaker</h1>
+                            <h1 class="mt-3" style="color: #abb9e8">Sneaker BeeHouse</h1>
                         </span>
                         </a>
                     </div>
@@ -134,7 +134,7 @@
                         <img src="../images/shoes.png" alt="" height="22">
                     </span>
                 <span class="logo-lg">
-                       <h1 class="mt-3" style="color: #abb9e8">FSneaker</h1>
+                       <h1 class="mt-3" style="color: #abb9e8">Sneaker BeeHouse</h1>
                     </span>
             </a>
             <!-- Light Logo-->
@@ -143,7 +143,7 @@
                         <img src="../images/shoes.png" alt="" height="22">
                     </span>
                 <span class="logo-lg">
-                        <h1 class="mt-3" style="color: #abb9e8">FSneaker</h1>
+                        <h1 class="mt-3" style="color: #abb9e8">Sneaker BeeHouse</h1>
                     </span>
             </a>
             <button type="button" class="btn btn-sm p-0 fs-20 header-item float-end btn-vertical-sm-hover"
