--- a/src/main/resources/templates/templateadmin/trangadmin.html
+++ b/src/main/resources/templates/templateadmin/trangadmin.html
@@ -89,7 +89,7 @@
                     <!-- LOGO -->
                     <div class="navbar-brand-box horizontal-logo">
                         <a href="/trangchuadmin" class="logo logo-dark">
-                            <h1>FSneaker</h1>
+                            <h1>Sneaker BeeHouse</h1>
                             <!--                        <span class="logo-sm">-->
                             <!--                            <img src="images/logo-sm.png" alt="" height="22">-->
                             <!--                        </span>-->
@@ -99,7 +99,7 @@
                         </a>
 
                         <a href="/trangchuadmin" class="logo logo-light">
-                            <h1>FSneaker</h1>
+                            <h1>Sneaker BeeHouse</h1>
                             <!--                        <span class="logo-sm">-->
                             <!--                            <img src="images/logo-sm.png" alt="" height="22">-->
                             <!--                        </span>-->
@@ -158,7 +158,7 @@
                         <img src="images/shoes.png" alt="" height="22">
                     </span>
                 <span class="logo-lg">
-                       <h1 class="mt-3">FSneaker</h1>
+                       <h1 class="mt-3">Sneaker BeeHouse</h1>
                     </span>
             </a>
             <!-- Light Logo-->
@@ -167,7 +167,7 @@
                         <img src="images/shoes.png" alt="" height="22">
                     </span>
                 <span class="logo-lg">
-                        <h1 class="mt-3" style="color: #abb9e8">FSneaker</h1>
+                        <h1 class="mt-3" style="color: #abb9e8">Sneaker BeeHouse</h1>
                     </span>
             </a>
             <button type="button" class="btn btn-sm p-0 fs-20 header-item float-end btn-vertical-sm-hover" id="vertical-hover">
