--- a/src/main/resources/templates/templateadmin/updateNhanVien.html
+++ b/src/main/resources/templates/templateadmin/updateNhanVien.html
@@ -50,7 +50,7 @@
                             <img src="../images/shoes.png" alt="" height="22">
                         </span>
                             <span class="logo-lg">
-                            <h1>FSneaker</h1>
+                            <h1>Sneaker BeeHouse</h1>
                         </span>
                         </a>
 
@@ -59,7 +59,7 @@
                             <img src="../images/shoes.png" alt="" height="22">
                         </span>
                             <span class="logo-lg">
-                            <h1>FSneaker</h1>
+                            <h1>Sneaker BeeHouse</h1>
                         </span>
                         </a>
                     </div>
@@ -111,7 +111,7 @@
                         <img src="../images/shoes.png" alt="" height="22">
                     </span>
                 <span class="logo-lg">
-                       <h1 class="mt-3" style="color: #abb9e8">FSneaker</h1>
+                       <h1 class="mt-3" style="color: #abb9e8">Sneaker BeeHouse</h1>
                     </span>
             </a>
             <!-- Light Logo-->
@@ -120,7 +120,7 @@
                         <img src="../images/shoes.png" alt="" height="22">
                     </span>
                 <span class="logo-lg">
-                       <h1 class="mt-3" style="color: #abb9e8">FSneaker</h1>
+                       <h1 class="mt-3" style="color: #abb9e8">Sneaker BeeHouse</h1>
                     </span>
             </a>
             <button type="button" class="btn btn-sm p-0 fs-20 header-item float-end btn-vertical-sm-hover" id="vertical-hover">
