--- a/src/main/resources/templates/templatekhachhang/san-pham-asics.html
+++ b/src/main/resources/templates/templatekhachhang/san-pham-asics.html
@@ -218,7 +218,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-3">
                         <div class="logo">
-                            <a href="/trang-chu"><h1>FSneaker</h1></a>
+                            <a href="/trang-chu"><h1>SneakerBeeHouse</h1></a>
                         </div>
                     </div>
                     <div class="col-lg-9">
@@ -1040,14 +1040,14 @@
                         <div class="col-lg-7 col-md-7 col-sm-7">
                             <div class="widgets_container contact_us">
                                 <div class="footer_logo">
-                                    <a href="/trang-chu"><h1 style="color: white">FSneaker</h1></a>
+                                    <a href="/trang-chu"><h1 style="color: white">Sneaker BeeHouse</h1></a>
                                 </div>
                                 <div class="footer_desc">
                                     <!--                                    <p>We are a team of designers and developers that create high quality HTML Template, Woocommerce, Shopify Theme.</p>-->
                                 </div>
 
                                 <p><span>Địa chỉ:</span> Trịnh Văn Bô, Nam Từ Liêm, Hà Nội</p>
-                                <p><span>Email:</span> <a target="_blank" href="#">FSneakerShop@gmail.com</a></p>
+                                <p><span>Email:</span> <a target="_blank" href="#">SneakerBeeHouseShop@gmail.com</a></p>
                                 <p><span>Hotline:</span> <a href="#">+1 250 3678 64587</a></p>
                             </div>
                         </div>
