--- a/src/main/resources/templates/templatekhachhang/thong-tin-khach-hang.html
+++ b/src/main/resources/templates/templatekhachhang/thong-tin-khach-hang.html
@@ -216,7 +216,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-3">
                         <div class="logo">
-                            <a href="/trang-chu"><h1>FSneaker</h1></a>
+                            <a href="/trang-chu"><h1>Sneaker BeeHouse</h1></a>
                         </div>
                     </div>
                     <div class="col-lg-9">
@@ -543,14 +543,14 @@
                         <div class="col-lg-7 col-md-7 col-sm-7">
                             <div class="widgets_container contact_us">
                                 <div class="footer_logo">
-                                    <a href="index.html"><h1 style="color: white">FSneaker</h1></a>
+                                    <a href="index.html"><h1 style="color: white">Sneaker BeeHouse</h1></a>
                                 </div>
                                 <div class="footer_desc">
                                     <!--                                    <p>We are a team of designers and developers that create high quality HTML Template, Woocommerce, Shopify Theme.</p>-->
                                 </div>
 
                                 <p><span>Địa chỉ:</span> Trịnh Văn Bô, Nam Từ Liêm, Hà Nội</p>
-                                <p><span>Email:</span> <a target="_blank" href="https://hasthemes.com/contact-us/">FSneakerShop@gmail.com</a></p>
+                                <p><span>Email:</span> <a target="_blank" href="https://hasthemes.com/contact-us/">SneakerBeeHouseShop@gmail.com</a></p>
                                 <p><span>Hotline:</span> <a href="tel:+1250367864587">+1 250 3678 64587</a></p>
                             </div>
                         </div>
