--- a/src/main/resources/templates/templatekhachhang/trangchukhachhang.html
+++ b/src/main/resources/templates/templatekhachhang/trangchukhachhang.html
@@ -268,7 +268,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-3">
                         <div class="logo">
-                            <a href="/trang-chu"><h1>FSneaker</h1></a>
+                            <a href="/trang-chu"><h1>Sneaker BeeHouse</h1></a>
                         </div>
                     </div>
                     <div class="col-lg-9">
@@ -719,7 +719,7 @@
                 <div class="banner-text">
                     <h3>Nhà thiết kế đặc biệt</h3>
                     <h2>bộ sưu tập giày</h2>
-                    <p>FSneaker Shop - Cửa hàng giày hàng đầu tại Việt Nam, cung cấp giày thiết kế chất lượng cao với giá cả không thể cạnh tranh</p>
+                    <p>Sneaker BeeHouse Shop - Cửa hàng giày hàng đầu tại Việt Nam, cung cấp giày thiết kế chất lượng cao với giá cả không thể cạnh tranh</p>
                     <a href="shop.html">Xem chi tiết</a>
                 </div>
             </div>
@@ -2023,14 +2023,14 @@
                         <div class="col-lg-7 col-md-7 col-sm-7">
                             <div class="widgets_container contact_us">
                                 <div class="footer_logo">
-                                    <a href="index.html"><h1 style="color: white">FSneaker</h1></a>
+                                    <a href="index.html"><h1 style="color: white">Sneaker BeeHouse</h1></a>
                                 </div>
                                 <div class="footer_desc">
                                     <!--                                    <p>We are a team of designers and developers that create high quality HTML Template, Woocommerce, Shopify Theme.</p>-->
                                 </div>
 
                                 <p><span>Địa chỉ:</span> Trịnh Văn Bô, Nam Từ Liêm, Hà Nội</p>
-                                <p><span>Email:</span> <a target="_blank" href="https://hasthemes.com/contact-us/">FSneakerShop@gmail.com</a></p>
+                                <p><span>Email:</span> <a target="_blank" href="https://hasthemes.com/contact-us/">SneakerBeeHouseShop@gmail.com</a></p>
                                 <p><span>Hotline:</span> <a href="tel:+1250367864587">+1 250 3678 64587</a></p>
                             </div>
                         </div>
